--- a/index.html
+++ b/index.html
@@ -272,10 +272,10 @@ $(document).ready(function () {
 
 
 <p><img src="files/lab_intro.png" class="hero-img" /></p>
-<p><strong>The Communication and Emerging Media (CEM[kem]) Lab</strong>
-is a collaborative research group that investigates the role of emerging
-media in the political communication landscape of the 21st century.
-Based in the <a
+<p><strong>The Communication and Emerging Media (CEM; pronounced “kem”)
+Lab</strong> is a collaborative research group that investigates the
+role of emerging media in the political communication landscape of the
+21st century. Based in the <a
 href="http://www.buffalo.edu/cas/communication.html">Department of
 Communication at the University at Buffalo</a> and the <a
 href="https://comm.uconn.edu/">Department of Communication at the
