--- a/people.html
+++ b/people.html
@@ -341,9 +341,7 @@ Media at the University of Michigan.</p>
 <p>contact: <a href="njkwak@buffalo.edu">njkwak@buffalo.edu</a></p>
 </div>
 </div>
-</div>
-<div id="afolabi-franca" class="section level2">
-<h2>AFOLABI FRANCA</h2>
+<!-- ## AFOLABI FRANCA -->
 </div>
 <div id="yijin-guo" class="section level2">
 <h2>YIJIN GUO</h2>
@@ -364,9 +362,38 @@ scams.</p>
 </div>
 <div id="james-kwarteng" class="section level2">
 <h2>JAMES KWARTENG</h2>
+<div class="person-row">
+<div class="person-photo">
+<p><img src="files/Kwarteng.png" class="profile-photo"></p>
+</div>
+<div class="person-text" markdown="1">
+<p>James Kwarteng is pursuing his Ph.D. in Communication at the
+University of Connecticut. He holds a master’s degree in communication
+from Eastern New Mexico University and a bachelor’s in English from
+Kwame Nkrumah University of Science and Technology. Before his Ph.D. at
+the University of Connecticut, James was the Radio Station and Social
+Media Manager of Eastern New Mexico University’s Hound Waves Radio. He
+managed social media websites and designed a mobile app for Hound Waves
+Radio. His research interests revolve around social media, interactive
+media, and computational methods.</p>
+</div>
+</div>
 </div>
 <div id="tahleen-lattimer" class="section level2">
 <h2>TAHLEEN LATTIMER</h2>
+<div class="person-row">
+<div class="person-photo">
+<p><img src="files/LATTIMER.JPG" class="profile-photo"></p>
+</div>
+<div class="person-text" markdown="1">
+<p>Tahleen Lattimer (PhD, University at Buffalo) is a postdoctoral
+research fellow at the Center for Disability Health &amp; Wellness in
+the Department of Physical Medicine &amp; Rehabilitation at Michigan
+Medicine, University of Michigan. Her research examines the intersection
+of health and media, with a focus on addressing the needs and
+experiences of disability populations across the lifespan.</p>
+</div>
+</div>
 </div>
 <div id="yi-yin-leong" class="section level2">
 <h2>YI YIN LEONG</h2>
@@ -484,7 +511,8 @@ research focuses on risk communication.</p>
 <p><img src="files/Emma.JPG" class="profile-photo"></p>
 </div>
 <div class="person-text" markdown="1">
-<p>Emma Bennett is an MA student in the Parsons School of Design.</p>
+<p>Emma Bennett (BA, University at Buffalo) is an MA student in the
+Parsons School of Design.</p>
 </div>
 </div>
 </div>
