--- a/publications.html
+++ b/publications.html
@@ -287,7 +287,9 @@ Dong, X. (2025). <a
 href="https://www.tandfonline.com/doi/full/10.1080/1369118X.2025.2581014">From
 activism to polarization: temporal dynamics of #MeToo politicization on
 Twitter/X.</a> <em>Information, Communication &amp; Society.</em>
-[*co-first authors] doi: 10.1080/1369118X.2025.2581014.</p>
+[*co-first authors] <a
+href="https://doi.org/10.1080/1369118X.2025.2581014"
+class="uri">https://doi.org/10.1080/1369118X.2025.2581014</a>.</p>
 <p>Zhang, Y.*, Suk, J.*, Yang, D., Yue, Z., Wang, R., Dong, X., An, Z.,
 &amp; Joseph, K. (2025). <a
 href="https://journalqd.org/article/view/5984">Center-Left and
@@ -316,14 +318,14 @@ the Personal Becomes Political: Unpacking the Dynamics of Sexual
 Violence and Gender Justice Discourses across Four Social Media
 Platforms.</a> <em>Communication Research.</em> <a
 href="https://doi.org/10.1177/00936502231154146"
-class="uri">https://doi.org/10.1177/00936502231154146</a></p>
+class="uri">https://doi.org/10.1177/00936502231154146</a>.</p>
 <p>Zhang, Y., Yue, Z., Yang, X., Chen, F., &amp; Kwak, N. (2022). <a
 href="https://journals.sagepub.com/doi/full/10.1177/14614448221137324">How
 a peripheral ideology becomes mainstream: Strategic performance,
 audience reaction, and news media amplification in the case of QAnon
 Twitter accounts.</a> <em>New Media &amp; Society</em>,
 14614448221137324. <a href="https://doi.org/10.1177/14614448221137324"
-class="uri">https://doi.org/10.1177/14614448221137324</a></p>
+class="uri">https://doi.org/10.1177/14614448221137324</a>.</p>
 </div>
 </div>
 <div class="section-toggle under-review-block">
